added javafx frontend and updated readme